<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:drawableLeft="@mipmap/ic_launcher"
        android:textColor="@color/mainblack"
        android:hint="@string/confirm_code"
        android:textColorHint="#b1b1b1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:id="@+id/edit_confirm"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="fill_parent"
        android:background="@color/mainyellow"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:id="@+id/btn_confirm"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:typeface="sans"
        android:layout_above="@+id/textView10"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend"
        android:id="@+id/textView10"
        android:textColor="@color/mainblue"
        android:layout_gravity="center_horizontal"
        android:singleLine="false"
        android:textSize="20sp"
        android:typeface="sans"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>