<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_toEndOf="@+id/imageView10"
        android:layout_toRightOf="@+id/imageView10"
        android:background="@color/white"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/language"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btn_language"
        android:layout_marginLeft="10dp"
        android:background="@mipmap/ic_language" />

    <Button
        android:id="@+id/btn_enter_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_language"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/imageView11"
        android:layout_toRightOf="@+id/imageView11"
        android:background="@color/white"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/setings_enter_header"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btn_enter_settings"
        android:layout_marginLeft="10dp"
        android:background="@mipmap/ic_entersettings" />

    <Button
        android:id="@+id/btn_dop_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_enter_settings"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/imageView12"
        android:layout_toRightOf="@+id/imageView12"
        android:background="@color/white"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/additional_settings"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btn_dop_settings"
        android:layout_marginLeft="10dp"
        android:background="@mipmap/ic_dopsettings" />

    <Button
        android:id="@+id/btn_write_dev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_dop_settings"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/imageView13"
        android:layout_toRightOf="@+id/imageView13"
        android:background="@color/white"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/write_developer"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btn_write_dev"
        android:layout_marginLeft="10dp"
        android:background="@mipmap/ic_writedev" />

    <Button
        android:id="@+id/btn_phone_dev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_write_dev"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/imageView14"
        android:layout_toRightOf="@+id/imageView14"
        android:background="@color/white"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/call_support"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btn_phone_dev"
        android:layout_marginLeft="10dp"
        android:background="@mipmap/ic_phonedev" />

    <Button
        android:id="@+id/btn_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_phone_dev"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/imageView15"
        android:layout_toRightOf="@+id/imageView15"
        android:background="@color/white"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/about"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btn_about"
        android:layout_marginLeft="10dp"
        android:background="@mipmap/ic_about" />

    <TextView
        android:id="@+id/txt_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_language"
        android:layout_alignRight="@+id/btn_language"
        android:layout_alignTop="@+id/btn_language"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:text="@string/rus"
        android:textColor="@color/maingrey" />

    <TextView
        android:id="@+id/txt_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_about"
        android:layout_alignRight="@+id/btn_about"
        android:layout_alignTop="@+id/btn_about"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:text="Версия 1.1"
        android:textColor="@color/maingrey" />
</RelativeLayout>