<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/oplata_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:focusable="true">

    <FrameLayout
        android:id="@+id/oplata_display_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerHorizontal="true"
        android:background="@android:color/white">

        <include
            layout="@layout/header_oplata"
            android:layout_width="match_parent"
            android:layout_height="60dip" />

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/lin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/oplata_display_background">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/im1"
            android:text="@string/payment_cash"
            android:textColor="@color/mainblue" />

        <ImageView
            android:id="@+id/im11"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center|right"
            android:layout_marginRight="10dp"
            android:background="@mipmap/ic_minus" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin1">

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@+id/im2"
            android:layout_toRightOf="@+id/im2"
            android:text="@string/payment_noncash"
            android:textColor="@color/mainblue" />

        <ImageView
            android:id="@+id/im22"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:background="@mipmap/ic_minus" />
    </RelativeLayout>


    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lin2"
        android:background="@android:color/transparent"
        android:minHeight="48dp"
        android:text="@string/btn_ok"
        android:textColor="@color/mainblue"
        android:textSize="@dimen/done_label_size" />


    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/done_button"
        android:layout_toLeftOf="@+id/done_button"
        android:layout_toStartOf="@+id/done_button"
        android:background="@android:color/transparent"
        android:text="@string/btn_cancel"
        android:textColor="@color/mainblue"
        android:textSize="@dimen/done_label_size" />
</RelativeLayout>


